tests/core/errors/test_formatting_data/during_select/TARGETS.fixture
load(":select.bzl", "map")

map()
